test/sema/typeck/fn/undefined-function.dora
fn f() { foo(); }

//====================
// error: unknown identifier `foo`.
// --> undefined-function.dora:1:10
//  | fn f() { foo(); }
//             ~~~
//  | 
// 1 error found.
